<resources>
    <string name="app_name">BME</string>

    //Chaînes de caractères pour l'activité de l'ergothérapeute
    <string name="titre">Profil de l\'ergothérapeute</string>
    <string name="nom">Nom :</string>
    <string name="nom_defaut">Entrer un nom</string>
    <string name="nouveauNom">Entrer un nouveau nom</string>
    <string name="prenom">Prénom :</string>
    <string name="prenom_defaut">Entrer un prénom</string>
    <string name="nouveauPrenom">Entrer un nouveau prénom</string>
    <string name="modifier">Modifier</string>
    <string name="confirmer">Confirmer</string>
    <string name="annuler">Annuler</string>
    <string name="persoListesDer">Personnalisation des listes déroulantes</string>
    <string name="persoId">Identité</string>
    <string name="info">Informations</string>
    <string name="id">Identité</string>
    <string name="mdv">Mode de vie</string>
    <string name="conclusion">Conclusion</string>
    <string name="changerMdp">Changer de mot de passe</string>

    //Chaînes de caractères pour le login
    <string name="entrerMdp">Entrer le mot de passe</string>
    <string name="mdp">Mot de passe</string>
    <string name="ancienMdp">Ancien mot de passe</string>
    <string name="nouveauMdp">Nouveau mot de passe</string>
    <string name="credit">credit</string>
    <string name="retour"><![CDATA[<-]]></string>

</resources>
