<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titreProfilErgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/titre"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/titreIdentite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titreProfilErgo"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/persoId" />

    <LinearLayout
        android:id="@+id/layout_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titreIdentite"
        android:layout_marginStart="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom" />

        <TextView
            android:id="@+id/texteNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:ems="10"
            android:text="@string/nom_defaut" />


        <Button
            android:id="@+id/modifierNom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/modifier" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_nom"
        android:layout_marginStart="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/prenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prenom" />

        <TextView
            android:id="@+id/textePrenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:ems="10"
            android:text="@string/prenom_defaut" />

        <Button
            android:id="@+id/modifierPrenom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/modifier" />

    </LinearLayout>
    <Button
        android:id="@+id/config_mot_de_passe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layout_prenom"
        android:text="@string/changerMdp"
        android:onClick="configuation"
        />

    <TextView
        android:id="@+id/titreListesDer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/config_mot_de_passe"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/persoListesDer" />

    <LinearLayout
        android:id="@+id/layout_liste_der1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titreListesDer"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/informations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/info" />

        <TextView
            android:id="@+id/identite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/id" />

        <TextView
            android:id="@+id/modeDeVie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/mdv" />
    </LinearLayout>


</RelativeLayout>