<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Login_activity">
    <LinearLayout
        android:id="@+id/linerlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/image"
            android:src="@mipmap/logo_anfe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <!---
        Au cas on envisage aussi le nom de l'ergo pour l'identification
        <TextView
            android:id="@+id/nom_utilisateur"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ems="10"
            android:hint="Nom d'utilisateur"
            android:inputType="textPersonName" />
            -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/entrerMdp"/>
        <EditText
            android:id="@+id/mot_de_passe"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:hint="@string/mdp"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/entrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirmer"
            android:onClick="connexion" />
        <Button
            android:id="@+id/credit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/credit"
            android:onClick="credit"
            />
    </LinearLayout>
</RelativeLayout>